--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: ZILCH HU
 email: 1368682187@qq.com
 description: >- # this means to ignore newlines until "baseurl:"
-  zilchhu,github pages
+  nil
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://zilchhu.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  zilchhu
