--- a/_config.yml
+++ b/_config.yml
@@ -13,19 +13,21 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: ZILCH HU
+title: Zilch Hu
 email: 1368682187@qq.com
 description: >- # this means to ignore newlines until "baseurl:"
   nil
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://zilchhu.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  zilchhu
-
+github_url: "https://github.com/zilchhu"
 # Build settings
 markdown: kramdown
+highlighter: rouge
 plugins:
   - jekyll-feed
-
+sass:
+    style: :compressed
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
